@@ -23,6 +23,7 @@ requires 'Cwd' => 0;
 requires 'File::Spec::Functions' => 0;
 requires 'File::Which' => 0;
 requires 'Getopt::Std' => 0;
+requires 'Readonly' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/App-Stow-Check/issues';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/App-Stow-Check';
 resources 'repository' => 'git://github.com/michal-josef-spacek/App-Stow-Check';
