@@ -1,9 +1,10 @@
 TODO
 ====
-1. Stow directory could be different.
 2. Tests.
 3. SEE ALSO for stow-switch
 4.
 
 Applied
 =======
+1. Stow directory could be different.
+OK [20210617] skim
