@@ -28,14 +28,14 @@ stow-check - Tool to check for which stow dist command is.
 
 =head1 SYNOPSIS
 
- stow-check [-h] [--version] command
+ stow-check [-d stow_dir] [-h] [--version] command
 
 =head1 DESCRIPTION
 
 Tool is checking:
 
  If command stands in /usr/local/bin
- If links to /usr/local/stow/__DIST__/[s]bin/__COMMAND__
+ If links to __STOW_DIR__/__DIST__/[s]bin/__COMMAND__
 
 If yes, returns __DIST__ name and exit code 0.
 If no, returns error message to STDERR and exit code 1.
@@ -43,6 +43,12 @@ If no, returns error message to STDERR and exit code 1.
 =head1 ARGUMENTS
 
 =over 8
+
+=item * C<-d stow_dir>
+
+Stow directory.
+
+Default value is '/usr/local/stow'.
 
 =item * C<-h>
 
