@@ -14,7 +14,8 @@ use App::Stow::Check;
 exit App::Stow::Check->new->run;
 
 # Output:
-# Usage: ./ex1.pl [-h] [--version] command
+# Usage: ./ex1.pl [-d stow_dir] [-h] [--version] command
+#         -d stow_dir     Stow directory (default value is '/usr/local/stow').
 #         -h              Help.
 #         --version       Print version.
 #         command         Command for which is stow dist looking.
